Fix incorrect usage of GCTraceTime in g1FullCollector and g1CollectedHeap

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 13
    • Affects Version/s: 11, 12
    • Component/s: hotspot
    • gc
    • b20

      There are incorrect usage of GCTraceTime in g1FullCollector.cpp and g1CollectedHeap.cpp that do not define a local variable name. Those affected timers will show zero value in the log. This is similar to JDK-8200730.

            Assignee:
            Man Cao
            Reporter:
            Man Cao
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved: