8223267: Fix incorrect usage of GCTraceTime in g1FullCollector and g1CollectedHeap

Reviewed-by: kbarrett, tschatzl